# utexo-smart-contracts

./: .gitignore  .gitmodules  README.md  foundry.toml
ethereum/: .env.deploy.example  .env.example  .env.interact.example  .env.testnet  .gitignore  .prettierrc  .solcover.js  .solhint.json  README.md  arguments.js  foundry.toml  hardhat.config.ts  justfile  package-lock.json  package.json
ethereum/.husky/: pre-commit
ethereum/contracts/: Bridge.sol  CommissionManager.sol  Errors.sol  MultiToken.sol  MultisigProxy.sol  ParamsStructs.sol
ethereum/helpers/: template.sqrl
ethereum/scripts/: config.ts  test-emergencyPause.ts  test-emergencyUnpause.ts  test-fundsInNative.ts  test-fundsOutNative.ts  test-proposeUpdateEnclaveSigners.ts
ethereum/src/: BaseBridge.sol  Bridge.sol  BridgeBase.sol  CommissionManager.sol  MultisigProxy.sol  ParamsStructs.sol  RouteRegistry.sol
ethereum/tasks/: bls-proxy-upgrade-bridge.ts  deploy-bls-proxy.ts  deploy-bridge.ts  deploy-fungible-token.ts  deploy-multi-token.ts  deploy-multisig-proxy.ts  deploy-proxy-contracts.ts  upgrade-bridge.ts  util.ts  verify-contract.ts
ethereum/test/: BaseBridge.t.sol  Bridge.t.sol  CommissionManager.t.sol  Integration.t.sol  MultisigProxy.t.sol  RgbSettlementModule.t.sol  RouteRegistry.t.sol  bls-proxy.test.ts  bridge-circle.test.ts  bridge-fungible-token.test.ts  bridge-multi-token.test.ts  bridge-native.test.ts  util.ts  (+8 more)
ethereum/util/: Cargo.toml
ethereum/util/src/: abi.rs
script/: Bridge.s.sol
src/: Bridge.sol  ParamsStructs.sol
tron/: README.md  package-lock.json  package.json
(+81 files in other folders)
