[package]
name = "ethereum-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
ethers = { version = "0.13", features = ["abigen"] } 
serde = "1.0.138"
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["full"] }
dotenv = "0.15"
thiserror = "1.0"
clap = { version = "3.1", features = ["derive"] }
envy = "0.4"
regex = "1.5"
once_cell = "1.11"
base64 = "0.13"
k256 = { version = "0.10", features = ["pem"] }
